--- a/src/components/markdown-styles.css
+++ b/src/components/markdown-styles.css
@@ -1,101 +1,128 @@
 .py-05 {
-    padding-top: 0.125rem;
-    padding-bottom: 0.125rem;
-  }
-  
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
+}
+
 .markdown {
-    @apply text-gray-900 leading-normal break-words;
+  @apply text-gray-900 leading-normal break-words text-lg;
 }
 
 .markdown > * + * {
-    @apply mt-0 mb-4;
+  @apply mt-0 mb-4;
 }
 
 .markdown li + li {
-    @apply mt-1;
+  @apply mt-1;
 }
 
 .markdown li > p + p {
-@apply mt-6;
+  @apply mt-6;
 }
 
 .markdown strong {
-@apply font-semibold;
+  @apply font-semibold;
 }
 
 .markdown a {
-@apply text-blue-600 font-semibold;
+  @apply text-blue-600 font-semibold;
 }
 
 .markdown strong a {
-@apply font-bold;
+  @apply font-bold;
 }
 
 .markdown h1 {
-@apply leading-tight text-4xl font-semibold mb-4 mt-6 pb-2;
+  @apply leading-tight text-4xl font-semibold mb-4 mt-6 pb-2;
 }
 
 .markdown h2 {
-@apply leading-tight text-2xl font-semibold mb-4 mt-6 pb-2;
+  @apply leading-tight text-2xl font-semibold mb-4 mt-6 pb-2;
 }
 
 .markdown h3 {
-@apply leading-snug text-lg font-semibold mb-4 mt-6;
+  @apply leading-snug text-xl font-semibold mb-4 mt-6;
 }
 
 .markdown h4 {
-@apply leading-none text-base font-semibold mb-4 mt-6;
+  @apply leading-none text-base font-semibold mb-4 mt-6;
 }
 
 .markdown h5 {
-@apply leading-tight text-sm font-semibold mb-4 mt-6;
+  @apply leading-tight text-sm font-semibold mb-4 mt-6;
 }
 
 .markdown h6 {
-@apply leading-tight text-sm font-semibold text-gray-600 mb-4 mt-6;
+  @apply leading-tight text-sm font-semibold text-gray-600 mb-4 mt-6;
 }
 
 .markdown blockquote {
-@apply text-base border-l-4 border-gray-300 pl-4 pr-4 text-gray-600;
-}
-
-.markdown code {
-@apply font-mono text-sm inline bg-gray-200 rounded px-1 py-05;
-}
-
-.markdown pre {
-@apply bg-gray-100 rounded p-4;
-}
-
-.markdown pre code {
-@apply block bg-transparent p-0 overflow-visible rounded-none;
-}
-
-.markdown ul {
-@apply text-base pl-8 list-disc;
-}
-
-.markdown ol {
-@apply text-base pl-8 list-decimal;
-}
-
-.markdown kbd {
-@apply text-xs inline-block rounded border px-1 py-05 align-middle font-normal font-mono shadow;
+  @apply text-base border-l-4 border-gray-300 pl-4 pr-4 text-gray-600;
 }
 
 .markdown table {
-@apply text-base border-gray-600;
+  @apply rounded;
 }
 
-.markdown th {
-@apply border py-1 px-3;
+.markdown thead {
+  @apply text-white bg-textColor text-sm;
 }
 
-.markdown td {
-@apply border py-1 px-3;
+.markdown code {
+  @apply font-mono text-sm inline bg-gray-200 rounded px-1 py-05;
+}
+
+.markdown pre {
+  @apply bg-gray-100 rounded;
+}
+
+.markdown pre[class*="language-"] {
+  @apply p-0;
+}
+
+.markdown pre code {
+  @apply block bg-transparent overflow-visible rounded-none;
+}
+
+.markdown ul {
+  @apply text-base pl-8 list-disc;
+}
+
+.markdown ol {
+  @apply text-base pl-8 list-decimal;
+}
+
+.markdown kbd {
+  @apply text-xs inline-block rounded border px-1 py-05 align-middle font-normal font-mono shadow;
 }
 
 /* Override pygments style background color. */
 .markdown .highlight pre {
-@apply bg-gray-100 !important;
+  @apply bg-gray-100 !important;
+}
+
+.katex {
+  @apply overflow-x-auto overflow-y-hidden;
+}
+
+/* Adjust the position of the line numbers */
+.gatsby-highlight pre[class*="language-"].line-numbers {
+  padding-left: 2.8em;
+}
+
+/**
+   * If you only want to use line numbering
+   */
+
+.gatsby-highlight {
+  background-color: #272822;
+  border-radius: 0.3em;
+  margin: 0.5em 0;
+  padding-left: 1em;
+  overflow: auto;
+}
+
+.gatsby-highlight pre[class*="language-"].line-numbers {
+  padding: 0;
+  padding-left: 2.8em;
+  overflow: initial;
 }
