--- a/src/components/markdown-styles.css
+++ b/src/components/markdown-styles.css
@@ -32,7 +32,7 @@
 }
 
 .markdown h1 {
-  @apply leading-tight text-4xl font-semibold mb-4 mt-6 pb-2;
+  @apply font-bevan leading-tight text-4xl font-semibold mb-4 mt-6 pb-2;
 }
 
 .markdown h2 {
