--- a/src/components/tailwind.css
+++ b/src/components/tailwind.css
@@ -1,21 +1,38 @@
-@tailwind base; 
-@tailwind components; 
+@tailwind base;
+@tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Bevan";
+  src: url("../../static/fonts/bevan/Bevan-Regular.ttf");
+}
+
+@font-face {
+  font-family: "PressStart";
+  src: url("../../static/fonts/press_start_2p/PressStart2P-Regular.ttf");
+}
+
+body {
+  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
+  background-color: #f9f9f9;
+}
+
 .scrollbar {
-    scrollbar-width: thin;
-    scrollbar-color: #2b2c34 #ffffff;
+  scrollbar-width: thin;
+  scrollbar-color: #2b2c34 #ffffff;
 }
 
 .scrollbar::-webkit-scrollbar {
-    width: 8px;
+  width: 8px;
 }
 
 .scrollbar::-webkit-scrollbar-track {
-    background-color: #ffffff;
+  background-color: #ffffff;
 }
 
 .scrollbar::-webkit-scrollbar-thumb {
-    background-color: #2b2c34;
-    border-radius: 15px;
+  background-color: #2b2c34;
+  border-radius: 15px;
 }
