--- a/src/components/markdown-styles.css
+++ b/src/components/markdown-styles.css
@@ -32,23 +32,23 @@
 }
 
 .markdown h1 {
-  @apply font-bevan leading-tight text-4xl font-semibold mb-4 mt-6 pb-2;
+  @apply font-bevan leading-tight text-4xl mb-4 mt-6 pb-2;
 }
 
 .markdown h2 {
-  @apply leading-tight text-2xl font-semibold mb-4 mt-6 pb-2;
+  @apply leading-tight text-2xl font-semibold mb-2 mt-2 pb-2;
 }
 
 .markdown h3 {
-  @apply leading-snug text-xl font-semibold mb-4 mt-6;
+  @apply leading-snug text-xl font-semibold mb-2 mt-2;
 }
 
 .markdown h4 {
-  @apply leading-none text-base font-semibold mb-4 mt-6;
+  @apply leading-none text-base font-semibold mb-2 mt-2;
 }
 
 .markdown h5 {
-  @apply leading-tight text-sm font-semibold mb-4 mt-6;
+  @apply leading-tight text-sm font-semibold mb-2 mt-6;
 }
 
 .markdown h6 {
@@ -68,16 +68,21 @@
 }
 
 .markdown code {
-  @apply font-mono text-sm inline bg-gray-200 rounded px-1 py-05;
+  @apply font-mono inline bg-gray-200 rounded px-1 py-05;
+}
+
+/* INLINE CODE */
+.markdown code[class*="language-"] {
+  @apply text-base
 }
 
 .markdown pre {
   @apply bg-gray-100 rounded;
 }
 
+/* BLOCK CODE */
 .markdown pre[class*="language-"] {
-  font-size: inherit;
-  padding: 1em;
+  @apply text-base p-0
 }
 
 .markdown pre code {
@@ -85,7 +90,7 @@
 }
 
 .markdown ul {
-  @apply text-base pl-8 list-disc;
+  @apply pl-8 list-disc;
 }
 
 .markdown ol {
@@ -121,10 +126,6 @@
   padding-left: 1em;
   padding-right: 1em;
   overflow: auto;
-}
-
-.gatsby-highlight pre[class*="language-"] {
-  font-size: .5em;
 }
 
 .gatsby-highlight pre[class*="language-"].line-numbers {
